--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.10.5
 click==8.3.0
+fastapi==0.119.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -8,13 +10,18 @@ idna==3.11
 joblib==1.5.2
 nltk==3.9.2
 numpy==2.3.4
+pydantic==2.12.3
+pydantic_core==2.41.4
 RapidFuzz==3.14.1
 regex==2025.9.18
 scikit-learn==1.7.2
 scipy==1.16.2
 setuptools==80.9.0
 sniffio==1.3.1
+starlette==0.48.0
 stopwordsiso==0.6.1
 threadpoolctl==3.6.0
 tqdm==4.67.1
+typing-inspection==0.4.2
 typing_extensions==4.15.0
+uvicorn==0.38.0
